calendar in opt news
Calendar div in opt news

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -662,7 +662,7 @@ border-radius:15px 15px 15px 15px;
 	color: var(--blue);
 }
 /* d3js graphiks visualisation */
-
+/* d3js graphiks visualisation */
 rect:hover{
 	fill: #F2C94C;
 }
