--- a/client/src/components/urls/word_news.css
+++ b/client/src/components/urls/word_news.css
@@ -89,3 +89,38 @@ font-size: 10px;
 	padding:0px 10px 0px 10px;
 
 }
+
+/* Новыйе слтили 10.05.2018 */
+
+.ns_important_words{
+	padding: 15px;
+	border-radius: 2px;
+}
+
+.important_word_container{
+	display: flex;
+	justify-content: space-between;
+}
+
+.important_word_name{
+	font-size: 14px;
+	color: var(--black);
+}
+
+.important_word_quantity{
+	font-size: 10px;
+	color: var(--grey);
+	padding: 1px 7px;
+	background: var(--halfg);
+	border-radius: 15px;
+	height: 16px;
+}
+
+.important_word .progress{
+	height: 5px;
+}
+
+.important_word .progress-bar{
+	width: 50%;
+	background-color:  var(--blue);
+}
