--- a/client/src/components/urls/word_news.css
+++ b/client/src/components/urls/word_news.css
@@ -1,23 +1,18 @@
+.word{
+	background-color: white;
+	margin:5px 10px 0px -10px;
+	height: 500px;
+	overflow-y: hidden;
+
+	font-family: "Roboto";
+}
+
+/* Новыйе слтили 10.05.2018 */
+
 .ns_important_words{
 	width: 265px;
 	padding: 15px;
 	border-radius: 2px;
-	background: #ffffff;
-	height: 100%;
-}
-
-.header_block_important_words{
-	padding-bottom: 10px;
-	border-bottom: solid 1px var(--halfg);
-	margin-bottom: 10px;
-}
-
-.ns_important_words .important_word:last-child{
-	margin-bottom: 0px;
-}
-
-.important_word{
-	margin-bottom: 15px;
 }
 
 .important_word_container{
@@ -41,7 +36,6 @@
 
 .important_word .progress{
 	height: 5px;
-	margin-top: 5px;
 }
 
 .important_word .progress-bar{
