--- a/client/src/components/parts/opt_news.css
+++ b/client/src/components/parts/opt_news.css
@@ -3,6 +3,7 @@
 	/*position: relative;*/
 	/*margin-left:210px;*/
 	padding-left: 0px;
+	margin-bottom: 10px;
 
 }
 #n_first{
@@ -392,3 +393,4 @@ height: 26px;
 	padding: 0;
 	background: var(--halfg);
 }
+
