--- a/client/src/components/urls/news.css
+++ b/client/src/components/urls/news.css
@@ -514,3 +514,33 @@ margin-right:20px;
 #redo span{
 	margin-left: 5px;
 }
+
+/*	стили 18.05.2018	*/
+
+.nav_news_card{
+	padding: 4px 25px;
+	background: #ffffff;
+	border-radius: 2px;
+}
+
+.nav_news_flex{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.control_index{
+	margin: 0;
+	font-size: 14px;
+	margin-right: 15px;
+}
+
+.control_arrow button{
+	background: none;
+	border: none;
+	padding: 0;
+}
+
+.next_news_page{
+	margin-right: 25px;
+}
